// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Advisor overlay visual snapshots > overlay-ask-advisor renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx 2.1%/128k ────────────────╮
│ Prompt  Review the primary transcript.         │
│                                                │
│ Context                                        │
│User → Primary                                  │
│Review the cache design.                        │
│                                                │
│Primary                                         │
│The cache now owns request deduplication.       │
│                                                │
│ Pull [0,12) · 4.2s                             │
│                                                │
│ Advisor                                        │
│    E2E_SECOND_OPINION: primary_transcript=seen │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-empty renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx ?/128k ───────────────────╮
│No Advisor chat yet.                            │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-long-content-small-terminal renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx 13.3%/128k ─────────╮
│ Prompt  Check whether this very long     │
│ prompt wraps without breaking the panel  │
│ border or hiding the input area.         │
│                                          │
│ Context                                  │
│User → Primary                            │
│Inspect the                               │
│super-long-token-without-natural-breaks-ab│
│cdefghijklmnopqrstuvwxyz-0123456789 in the│
│cache design.                             │
│                                          │
│Primary                                   │
│The Primary response remains visible while│
│wrapping inside the narrow Context block. │
│                                          │
│ Advisor                                  │
│    The narrow overlay wraps the Primary  │
│    context safely without widening.      │
╰──────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-repeated-ask renders a stable bounded overlay 1`] = `
"╭ Advisor · idle · ctx 2.5%/128k ────────────────╮
│ Prompt  Explain the same Primary response from │
│ another angle.                                 │
│                                                │
│ Advisor                                        │
│    The repeated Ask reuses the existing Advisor│
│    Transcript.                                 │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯"
`;

exports[`Advisor overlay visual snapshots > overlay-reset renders a stable bounded overlay 1`] = `
"╭ Advisor · reset · ctx 0.0%/128k ───────────────╮
│No Advisor chat yet.                            │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯"
`;
